refactor: standardize dependents like other weak entities